The library icon was removed completely.

--- a/FluentDecoration/FluentDecoration.csproj
+++ b/FluentDecoration/FluentDecoration.csproj
@@ -6,7 +6,7 @@
     <Company>Anderson Rocha</Company>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageIcon>icon.png</PackageIcon>
+    <PackageIcon></PackageIcon>
     <PackageIconUrl />
     <Version>1.0.1</Version>
   </PropertyGroup>
