--- a/FluentDecoration/FluentDecoration.csproj
+++ b/FluentDecoration/FluentDecoration.csproj
@@ -8,7 +8,8 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon></PackageIcon>
     <PackageIconUrl />
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
+    <Description>Increase the readability of your code with this simple library.</Description>
   </PropertyGroup>
 
 </Project>
